[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/ship/player_ship_sprite.png" type="Texture" id=1]
[ext_resource path="res://PlayerBoat.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 328, 122, 164 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 122, 328, 122, 164 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 244, 328, 122, 164 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 366, 328, 122, 164 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 164, 122, 164 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 122, 164, 122, 164 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 244, 164, 122, 164 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 366, 164, 122, 164 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 492, 122, 164 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 122, 492, 122, 164 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 244, 492, 122, 164 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 366, 492, 122, 164 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 122, 164 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 122, 0, 122, 164 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 244, 0, 122, 164 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 366, 0, 122, 164 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 2.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "up",
"speed": 2.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "down",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.4632
height = 98.5918

[node name="PlayerBoat" type="KinematicBody2D"]
rotation = 0.00872665
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.999962, 0.00872654 )
frames = SubResource( 1 )
animation = "down"
offset = Vector2( -10, 0 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.0597201, -0.132855 )
current = true
smoothing_enabled = true

[node name="ShootRaySouth" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 200 )

[node name="ShootRayNorth" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 200 )

[node name="FireReloadTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="FireReloadTimer" to="." method="_on_FireReloadTimer_timeout"]
